# skills

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md
skills/finance-substrate/: SKILL.md  pyproject.toml  skill.json
skills/finance-substrate/importers/: arq.json  davivienda.json  nequi.json
skills/finance-substrate/parsers/: acciones-valores-fondos.json  acciones-valores.json  banco-bogota.json  davivienda.json  nequi.json  nu-colombia.json  planilla-pila.json  rappicuenta.json  skandia.json
skills/finance-substrate/references/: data-architecture.md  dian-muisca-automation.md  gmail-data-sources.md
skills/finance-substrate/scripts/: budget_planner.py  fill_form210.py  gmail_collector.py  import_certificates.py  import_csv.py  optimize_deductions.py  parse_engine.py  patrimonio_calc.py  self_heal.py  tax_projection.py
skills/finance-substrate/templates/: categories.json  form-210-schema.json  parser-schema.json  tax-tables-2024.json  tax-tables-2025.json  tax-tables-2026.json
skills/health/: .gitignore  CHANGELOG.md  Makefile  README.md  SKILL.md  install-skill.sh  install.sh  pyproject.toml
skills/health/References/: extension-guide.md  garmin-api-landscape-2026.md  healthkit-data-model.md  privacy-architecture.md  rate-limit-discipline.md  validation-evidence.md
skills/health/Workflows/: Backfill.md  DailyNote.md  RecoveryReview.md  Sync.md  VO2maxArc.md
skills/health/src/broomva_health/: __init__.py
skills/health/src/broomva_health/adapters/: clock.py
skills/health/src/broomva_health/adapters/mfa/: __init__.py
skills/health/src/broomva_health/adapters/rate_limiters/: __init__.py  token_bucket.py
skills/health/src/broomva_health/adapters/repositories/: __init__.py  sqlite.py
skills/health/src/broomva_health/adapters/sources/: _mapping.py  _registry.py  garmin.py  garmin_cli.py  garmin_native.py
skills/health/src/broomva_health/adapters/token_stores/: filesystem.py
skills/health/src/broomva_health/application/: __init__.py  backfill.py  sync.py
skills/health/src/broomva_health/cli/: __init__.py  activities.py  app.py  auth.py  backfill.py  container.py  context.py  daily_note.py  doctor.py  formatters.py  raw.py  series.py  status.py  sync.py  synthesis.py  training.py
skills/health/src/broomva_health/config/: __init__.py  paths.py  settings.py
skills/health/src/broomva_health/domain/: __init__.py  device.py  metrics.py  raw.py  results.py  source.py  time.py
skills/health/src/broomva_health/migrations/: 002_indexes.sql  003_raw_document.sql  __init__.py  runner.py
skills/health/src/broomva_health/ports/: __init__.py  mfa.py  repository.py  token_store.py
skills/health/src/broomva_health/synthesis/: __init__.py  service.py  vo2max.py
skills/health/tests/: conftest.py
skills/health/tests/fixtures/garmin/: canned_responses.py  fake_client.py
skills/health/tests/integration/: test_sync_to_obsidian_chain.py
skills/health/tests/unit/: test_package_versioning.py
skills/health/tests/unit/adapters/: test_clock.py  test_filesystem_token_store.py  test_garmin_cli_source.py  test_garmin_native_source.py  test_garmin_source.py  test_mfa.py  test_migration_runner.py  test_sqlite_repository.py
skills/health/tests/unit/cli/: test_backfill_cli.py  test_cli_smoke.py  test_doctor.py  test_series_cli.py
skills/health/tests/unit/domain/: test_metrics.py  test_paths.py  test_results.py  test_samples.py  test_settings.py  test_time.py
skills/health/tests/unit/synthesis/: test_service.py  test_training_load.py  test_vo2max.py
skills/investment-management/services/tradingview-bridge/: .env.example  QUICKSTART.md  README.md  pyproject.toml
skills/investment-management/services/tradingview-bridge/.control/: policy.yaml
skills/investment-management/services/tradingview-bridge/scripts/: capture_chart.sh
skills/investment-management/services/tradingview-bridge/src/tradingview_bridge/: app.py  barsource.py  bookkeeping.py  dispatch.py  idempotency.py  interceptor_driver.py  logging_setup.py  orders.py  ratelimit.py  schemas.py  settings.py
skills/investment-management/services/tradingview-bridge/src/tradingview_bridge/clients/: __init__.py  base.py  ibkr.py  kraken.py  mock.py  polymarket.py  tradingview_paper.py
skills/investment-management/services/tradingview-bridge/src/tradingview_bridge/evaluation/: ledger.py  score.py  walk_forward.py
skills/investment-management/services/tradingview-bridge/src/tradingview_bridge/operator/: __init__.py  canary.py  cli.py  (+3 more)
skills/investment-management/services/tradingview-bridge/strategies/: README.md
skills/investment-management/services/tradingview-bridge/strategies/pine/: 01-sma-crossover.pine  02-rsi-mean-reversion.pine  04-bollinger-squeeze.pine  05-multi-timeframe-trend.pine
skills/investment-management/services/tradingview-bridge/tests/: conftest.py  test_auth.py  test_barsource.py  test_clients_interface.py  test_clients_mock.py  test_clients_tradingview_paper.py  test_dispatch.py  test_evaluation_ledger.py  test_forecast_strategy.py  test_idempotency.py  test_interceptor_driver.py  test_operator_canary.py  test_operator_loop.py  test_operator_positions.py  test_operator_state.py  test_optimize_cli.py  test_orchestrator_cli.py  test_orchestrator_runner.py  test_orders.py  test_ratelimit.py  test_roster_cli.py  test_roster_store.py  test_scheduler.py  test_schemas.py  test_strategy_score.py  test_walk_forward.py  test_webhook_smoke.py
skills/microgrid-agent/kernel/: Cargo.toml
skills/microgrid-agent/kernel/src/: autonomic.rs  config.rs  dashboard.rs  devices.rs  dispatch.rs  journal.rs  knowledge.rs  main.rs  ml_bridge.rs  sync.rs
skills/microgrid-agent/kernel/src/tools/: mod.rs  modbus.rs  vedirect.rs
skills/microgrid-agent/reference/: main.py  pyproject.toml
skills/microgrid-agent/reference/src/: __init__.py  agent.py  autonomic.py  dashboard.py  devices.py  dispatch.py  knowledge.py  sync.py
skills/microgrid-agent/reference/tests/: test_autonomic.py  test_devices.py  test_dispatch.py  test_forecast.py  test_knowledge.py  test_sync.py
(+945 files in other folders)
